 * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
 * ReScene: -x and -d extracts to folder named after .srr in the output path
 * ReScene: Duplicate SFV lines won't include the RAR meta data twice.
 * ReScene: No crashes on RAR5 files. (but no support yet)
 * ReScene: SFV files with only \r (MacOS) line endings work
 * ReTag: Script to fix the tagging of music files. (retag.py)
 * New script added to detect bad "samples" in SRR files. (srs_bad.py)
 * New script added to batch create SRS or TXT files. (batch_srs.py)
 * Scripts relocated and .bat files added for easy PATH inclusion in Windows.
 * awescript: Move proof images to Proof/ folder.
 * Usenet: better error handling/prevention
 * Lots of bug fixes/small improvements. (none related to compressed rars)

pyReScene 0.5.1 (2013-07-14)
===============

 * "SRRs for vobsubs" is disabled due to a bug.

pyReScene 0.5 (2013-07-14)
=============

 * ReScene: initialization bug fixed (compressed RARs issue)
 * ReScene: choosing correct dictionary size while reconstructing
 * ReScene: able to reconstruct RAR 2.0x archives
 * ReScene: solid archives fix (threading issue)
 * ReScene: fix for archives larger than 4GB
 * ReScene: support for compression failures
            (larger packed size than unpacked size)
 * ReScene: provided -t folder does not need to be empty
 * ReScene: support for padding at the end of the RAR files
            Never.on.Sunday.1960.DVDRip.XviD-AEN and recent DAA, Ltu releases
 * ReScene: don't leave a broken SRR file when a 0-byte RAR file is encountered
 * ReScene: -r parameter to locate renamed files when using  -q, --verify
 * ReSample: FLAC and MP3 support: backing up tags to SRS file
             + AcoustID fingerprint and duration
          	 MP3 tags: ID3v1, ID3v2, Lyrics3v1, Lyrics3v2, APEv1, APEv2
 * ReSample: -m option added to prevent using stored match offsets
 * ReSample: fixed KeyError on sample reconstruction